# SampleC

./: settings.gradle
app/: build.gradle  local.properties
app/src/androidTest/java/com/example/samplec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dateTime.h  native-lib.cpp  print_feature_names.cpp
app/src/main/cpp/NFIQ2/: CMakeLists.txt
app/src/main/cpp/hello world/: hello_world.cpp
app/src/main/cpp/hello_world/: CMakeLists.txt  hello_world.hpp
app/src/main/java/com/example/samplec/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/samplec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
